[gd_scene load_steps=3 format=3 uid="uid://cs61hh6a5onuu"]

[ext_resource type="Script" uid="uid://bjl1csrh6kwip" path="res://Scripts/Main Menu/title_screen.gd" id="1_4tbts"]
[ext_resource type="Texture2D" uid="uid://dv6a36mp5hvqj" path="res://Assets/TempAssets/Temp Title Background.png" id="2_k8d4h"]

[node name="Title Screen" type="Node2D"]
script = ExtResource("1_4tbts")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 320.0
offset_bottom = 180.0
texture = ExtResource("2_k8d4h")

[node name="Play" type="Button" parent="."]
offset_left = 126.0
offset_top = 27.0
offset_right = 199.0
offset_bottom = 58.0
text = "Play
"

[node name="Settings" type="Button" parent="."]
offset_left = 128.0
offset_top = 66.0
offset_right = 198.0
offset_bottom = 97.0
text = "Settings
"

[node name="Exit" type="Button" parent="."]
offset_left = 144.0
offset_top = 103.0
offset_right = 181.0
offset_bottom = 134.0
text = "Exit"

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
